# iexec-substrate-poc

./: Cargo.toml  README.md
runtime/: Cargo.toml
runtime/src/: iexec.rs  lib.rs
runtime/wasm/: Cargo.toml
src/: main.rs
