[[bin]]
name = 'iexec-poc'
path = 'src/main.rs'

[package]
authors = ['Parity Technologies <admin@parity.io>']
build = 'build.rs'
edition = '2018'
name = 'node-template'
version = '0.9.0'

[build-dependencies]
vergen = '3'

[dependencies]
error-chain = '0.12'
exit-future = '0.1'
futures = '0.1'
hex-literal = '0.1'
log = '0.4'
parity-codec = '3.0'
parking_lot = '0.7.1'
slog = '^2'
tokio = '0.1'
trie-root = '0.11.0'

[dependencies.basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-basic-authorship'
rev = 'ed2faf445f8849e8d90ddadc684ac2658819e55f'

[dependencies.consensus]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura'
rev = 'ed2faf445f8849e8d90ddadc684ac2658819e55f'

[dependencies.ctrlc]
features = ['termination']
version = '3.0'

[dependencies.inherents]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-inherents'
rev = 'ed2faf445f8849e8d90ddadc684ac2658819e55f'

[dependencies.network]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-network'
rev = 'ed2faf445f8849e8d90ddadc684ac2658819e55f'

[dependencies.node-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = 'ed2faf445f8849e8d90ddadc684ac2658819e55f'

[dependencies.node-template-runtime]
path = 'runtime'

[dependencies.primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = 'ed2faf445f8849e8d90ddadc684ac2658819e55f'

[dependencies.sr-io]
git = 'https://github.com/paritytech/substrate.git'
rev = 'ed2faf445f8849e8d90ddadc684ac2658819e55f'

[dependencies.substrate-cli]
git = 'https://github.com/paritytech/substrate.git'
rev = 'ed2faf445f8849e8d90ddadc684ac2658819e55f'

[dependencies.substrate-client]
git = 'https://github.com/paritytech/substrate.git'
rev = 'ed2faf445f8849e8d90ddadc684ac2658819e55f'

[dependencies.substrate-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = 'ed2faf445f8849e8d90ddadc684ac2658819e55f'

[dependencies.substrate-service]
git = 'https://github.com/paritytech/substrate.git'
rev = 'ed2faf445f8849e8d90ddadc684ac2658819e55f'

[dependencies.transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-transaction-pool'
rev = 'ed2faf445f8849e8d90ddadc684ac2658819e55f'
[profile.release]
panic = 'unwind'
