[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'node-template-runtime'
version = '0.9.0'

[features]
default = ['std']
std = [
    'parity-codec/std',
    'parity-codec-derive/std',
    'primitives/std',
    'client/std',
    'rstd/std',
    'runtime-io/std',
    'support/std',
    'balances/std',
    'fees/std',
    'executive/std',
    'aura/std',
    'indices/std',
    'primitives/std',
    'system/std',
    'timestamp/std',
    'sudo/std',
    'version/std',
    'serde_derive',
    'serde/std',
    'safe-mix/std',
    'consensus-aura/std',
]
[dependencies.aura]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-aura'
rev = 'ed2faf445f8849e8d90ddadc684ac2658819e55f'

[dependencies.balances]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-balances'
rev = 'ed2faf445f8849e8d90ddadc684ac2658819e55f'

[dependencies.client]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-client'
rev = 'ed2faf445f8849e8d90ddadc684ac2658819e55f'

[dependencies.consensus]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-consensus'
rev = 'ed2faf445f8849e8d90ddadc684ac2658819e55f'

[dependencies.consensus-aura]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura-primitives'
rev = 'ed2faf445f8849e8d90ddadc684ac2658819e55f'

[dependencies.executive]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-executive'
rev = 'ed2faf445f8849e8d90ddadc684ac2658819e55f'

[dependencies.fees]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-fees'
rev = 'ed2faf445f8849e8d90ddadc684ac2658819e55f'

[dependencies.indices]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-indices'
rev = 'ed2faf445f8849e8d90ddadc684ac2658819e55f'

[dependencies.parity-codec]
default-features = false
version = '3.0'

[dependencies.parity-codec-derive]
default-features = false
version = '3.0'

[dependencies.primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = 'ed2faf445f8849e8d90ddadc684ac2658819e55f'

[dependencies.rstd]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-std'
rev = 'ed2faf445f8849e8d90ddadc684ac2658819e55f'

[dependencies.runtime-io]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-io'
rev = 'ed2faf445f8849e8d90ddadc684ac2658819e55f'

[dependencies.runtime-primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-primitives'
rev = 'ed2faf445f8849e8d90ddadc684ac2658819e55f'

[dependencies.safe-mix]
default-features = false
version = '1.0'

[dependencies.serde]
default-features = false
version = '1.0'

[dependencies.serde_derive]
optional = true
version = '1.0'

[dependencies.sudo]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-sudo'
rev = 'ed2faf445f8849e8d90ddadc684ac2658819e55f'

[dependencies.support]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-support'
rev = 'ed2faf445f8849e8d90ddadc684ac2658819e55f'

[dependencies.system]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-system'
rev = 'ed2faf445f8849e8d90ddadc684ac2658819e55f'

[dependencies.timestamp]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-timestamp'
rev = 'ed2faf445f8849e8d90ddadc684ac2658819e55f'

[dependencies.version]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-version'
rev = 'ed2faf445f8849e8d90ddadc684ac2658819e55f'
